# cooperation-sim

./: .gitignore  CMakeLists.txt  PROJECT_SUMMARY.md  README.md
analysis/: CAPACITY.md  FINDINGS.md  boundary_sweep.py  build_report.py  capacity_asymptote.py  capacity_compare.py  capacity_flows.py  collapse_rate.py  compare_seeds.py  meanfield_decomp.py  meanfield_fit.py  n16_compare.py  plot_metrics.py  run_seeds.sh  run_witness_seeds.sh  simplest_model.py  witness_v0.py  witness_v0_xenet.txt
output/easy_success/: summary.txt
output/high_exploration/: summary.txt
output/inequality/: summary.txt
output/intervention_explore/: summary.txt
output/intervention_no_gen/: summary.txt
output/intervention_subsidy/: summary.txt
output/low_exploration/: summary.txt
output/markers_off/: summary.txt
output/markers_off__seed1000/: summary.txt
output/markers_off__seed1001/: summary.txt
output/markers_off__seed1002/: summary.txt
output/markers_off__seed1003/: summary.txt
output/markers_only/: summary.txt
scenarios/: bsp_030.conf  bsp_035.conf  bsp_036.conf  bsp_037.conf  bsp_038.conf  bsp_038_n16.conf  bsp_039.conf  bsp_039_n16.conf  bsp_040.conf  bsp_040_n16.conf  bsp_045.conf  bsp_050.conf  default.conf  easy_success.conf  high_exploration.conf  inequality.conf  intervention_explore.conf  intervention_no_gen.conf  intervention_subsidy.conf  low_exploration.conf  markers_lossaverse.conf  markers_off.conf  markers_off_decay4x.conf  markers_only.conf  mini.conf  new_entrant.conf  profile.conf  regression.conf  witness_v0.conf  witness_v1.conf  witness_v1_30k.conf  witness_v1_30k_no_places.conf  witness_v1_no_places.conf  witness_v2_30k.conf  witness_v3_30k.conf
src/: main.c
(+342 files in other folders)
